// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Form Default 1`] = `
<form
  class="rpl-form rpl-form--full-width"
>
  <h3
    class="rpl-form__title"
  >
    Example form
  </h3>
   
  <!---->
   
  <div
    class="vue-form-generator"
  >
    <fieldset
      class="rpl-fieldset"
    >
      <div
        class="rpl-fieldset__inner"
      >
        <div
          class="form-group valid field-input"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="hidden"
                type="hidden"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid required field-input"
        >
          <label
            for="text"
          >
            <span>
              Text
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="text"
                placeholder="Enter some text..."
                required="required"
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            This is a hint text
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid field-input"
        >
          <label
            for="email"
          >
            <span>
              Email
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="email"
                type="email"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            This is a hint text
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid field-input"
        >
          <label
            for="tel"
          >
            <span>
              Tel
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="tel"
                type="tel"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-input"
        >
          <label
            for="number"
          >
            <span>
              Number
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="number"
                max="100"
                min="0"
                placeholder="x10"
                step="10"
                type="number"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid rpl-form__prepend-icon rpl-form__prepend-icon--search field-input"
        >
          <label
            for="text-with-search-icon"
          >
            <span>
              Text - With search icon
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="text-with-search-icon"
                placeholder="Enter search term..."
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-radios"
        >
          <label
            for="radio"
          >
            <span>
              Radio
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="radio-list"
            >
              <label
                class=""
              >
                <input
                  id="radio-1"
                  name="radio"
                  type="radio"
                  value="Yes"
                />
                Yes
              </label>
              <label
                class=""
              >
                <input
                  id="radio-2"
                  name="radio"
                  type="radio"
                  value="No"
                />
                No
              </label>
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            This is a hint text
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid field-rploptionbutton"
        >
          <label
            for="option-button-default"
          >
            <span>
              Option button default
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-option-button"
              id="option-button-default"
            >
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-1"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-1"
                  name="option-button-default"
                  type="radio"
                  value="A"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  A
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-2"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-2"
                  name="option-button-default"
                  type="radio"
                  value="B"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  B
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-3"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-3"
                  name="option-button-default"
                  type="radio"
                  value="C"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  C
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-4"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-4"
                  name="option-button-default"
                  type="radio"
                  value="D"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  D
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-5"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-5"
                  name="option-button-default"
                  type="radio"
                  value="E"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  E
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-6"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-6"
                  name="option-button-default"
                  type="radio"
                  value="F"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  F
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-7"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-7"
                  name="option-button-default"
                  type="radio"
                  value="G"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  G
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-8"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-8"
                  name="option-button-default"
                  type="radio"
                  value="H"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  H
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-9"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-9"
                  name="option-button-default"
                  type="radio"
                  value="I"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  I
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-10"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-10"
                  name="option-button-default"
                  type="radio"
                  value="J"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  J
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-11"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-11"
                  name="option-button-default"
                  type="radio"
                  value="K"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  K
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-12"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-12"
                  name="option-button-default"
                  type="radio"
                  value="L"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  L
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-13"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-13"
                  name="option-button-default"
                  type="radio"
                  value="M"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  M
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-14"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-14"
                  name="option-button-default"
                  type="radio"
                  value="N"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  N
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-15"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-15"
                  name="option-button-default"
                  type="radio"
                  value="O"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  O
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-16"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-16"
                  name="option-button-default"
                  type="radio"
                  value="P"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  P
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-17"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-17"
                  name="option-button-default"
                  type="radio"
                  value="Q"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Q
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-18"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-18"
                  name="option-button-default"
                  type="radio"
                  value="R"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  R
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-19"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-19"
                  name="option-button-default"
                  type="radio"
                  value="S"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  S
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-20"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-20"
                  name="option-button-default"
                  type="radio"
                  value="T"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  T
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-21"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-21"
                  name="option-button-default"
                  type="radio"
                  value="U"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  U
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-22"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-22"
                  name="option-button-default"
                  type="radio"
                  value="V"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  V
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-23"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-23"
                  name="option-button-default"
                  type="radio"
                  value="W"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  W
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-24"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-24"
                  name="option-button-default"
                  type="radio"
                  value="X"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  X
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-25"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-25"
                  name="option-button-default"
                  type="radio"
                  value="Y"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Y
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-default-opt-26"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-default-opt-26"
                  name="option-button-default"
                  type="radio"
                  value="Z"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Z
                </span>
              </label>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rploptionbutton"
        >
          <label
            for="option-button-custom"
          >
            <span>
              Option button custom
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-option-button"
              id="option-button-custom"
            >
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-1"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-1"
                  name="option-button-custom"
                  type="radio"
                  value="Option one"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option one
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-2"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-2"
                  name="option-button-custom"
                  type="radio"
                  value="Option two"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option two
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-3"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-3"
                  name="option-button-custom"
                  type="radio"
                  value="Option three"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option three
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-4"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-4"
                  name="option-button-custom"
                  type="radio"
                  value="Option four"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option four
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-5"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-5"
                  name="option-button-custom"
                  type="radio"
                  value="Option five"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option five
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-6"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-6"
                  name="option-button-custom"
                  type="radio"
                  value="Option six"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option six
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-7"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-7"
                  name="option-button-custom"
                  type="radio"
                  value="Option seven"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option seven
                </span>
              </label>
              <label
                class="rpl-option-button__label"
                for="option-button-custom-opt-8"
              >
                <input
                  class="rpl-option-button__radio"
                  id="option-button-custom-opt-8"
                  name="option-button-custom"
                  type="radio"
                  value="Option eight"
                />
                 
                <span
                  class="rpl-option-button__text"
                >
                  Option eight
                </span>
              </label>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid required field-textArea"
        >
          <label
            for="text-area"
          >
            <span>
              text area
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <textarea
              class="form-control"
              id="text-area"
              placeholder="Start typing..."
              required="required"
              rows="4"
            />
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            This is a hint text
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid field-rpldatepicker"
        >
          <label
            for="date-range"
          >
            <span>
              Date Range
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-date-picker rpl-date-picker--range"
            >
              <div
                class="rpl-form-pikaday rpl-date-picker__start"
              >
                <input
                  aria-label="Enter start date"
                  class="rpl-form-pikaday__input"
                  placeholder="Enter start date"
                  type="text"
                />
                 
                <!---->
                 
                <div
                  aria-hidden="true"
                  class="rpl-form-pikaday__container"
                >
                  <div
                    class="pika-single rpl-pikaday is-hidden is-bound"
                    style="position: static;"
                  />
                </div>
              </div>
               
              <span
                aria-hidden="true"
                class="rpl-date-picker__separator"
              >
                -
              </span>
               
              <div
                class="rpl-form-pikaday rpl-date-picker__end"
              >
                <input
                  aria-label="Enter end date"
                  class="rpl-form-pikaday__input"
                  placeholder="Enter end date"
                  type="text"
                />
                 
                <!---->
                 
                <div
                  aria-hidden="true"
                  class="rpl-form-pikaday__container"
                >
                  <div
                    class="pika-single rpl-pikaday is-hidden is-bound"
                    style="position: static;"
                  />
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rpldatepicker"
        >
          <label
            for="date"
          >
            <span>
              Date
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-date-picker rpl-date-picker--single"
            >
              <div
                class="rpl-form-pikaday"
              >
                <input
                  aria-label="Enter a date"
                  class="rpl-form-pikaday__input"
                  placeholder="Enter a date"
                  type="text"
                />
                 
                <!---->
                 
                <div
                  aria-hidden="true"
                  class="rpl-form-pikaday__container"
                >
                  <div
                    class="pika-single rpl-pikaday is-hidden is-bound"
                    style="position: static;"
                  />
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rplslider"
        >
          <label
            for="set-a-funding-range"
          >
            <span>
              Set a funding range
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-slider"
            >
              <div
                aria-hidden="true"
                class="rpl-slider__spacers"
              >
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
                <span
                  class="rpl-slider__spacer"
                />
              </div>
               
              <div
                class="rpl-slider__wrapper"
              >
                <div
                  class="rpl-slider__progress"
                  style="left: 12.5%; right: 12.5%;"
                />
                 
                <label
                  class="rpl-slider__label rpl-slider__label--lower"
                  style="left: 12.5%;"
                >
                  <span
                    class="rpl-slider__handle"
                  >
                    Set a funding range - Lower value
                  </span>
                   
                  <div
                    aria-hidden="true"
                    class="rpl-slider__display-label"
                  >
                    $10,000
                  </div>
                   
                  <input
                    class="rpl-slider__input"
                    max="70000"
                    min="0"
                    step="5000"
                    type="number"
                  />
                </label>
                 
                <label
                  class="rpl-slider__label rpl-slider__label--upper"
                  style="right: 12.5%;"
                >
                  <span
                    class="rpl-slider__handle"
                  >
                    Set a funding range - Upper valueue
                  </span>
                   
                  <div
                    aria-hidden="true"
                    class="rpl-slider__display-label"
                  >
                    $70,000
                  </div>
                   
                  <input
                    class="rpl-slider__input"
                    max="80000"
                    min="10000"
                    step="5000"
                    type="number"
                  />
                </label>
              </div>
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            $0 - $80,000
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid field-rpldivider"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <hr
              class="rpl-divider"
            />
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rplmarkup"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-markup tide-wysiwyg app-wysiwyg"
            >
              <div
                class="rpl-markup__inner"
              >
                <h3>
                  Markup field
                </h3>
                 
                <figure
                  class="rpl-document-link"
                >
                  <a
                    aria-label=" Detailed Guide on the mandatory IR management criteria  File type: docx. Size: 75.22 KB"
                    class="rpl-document-link__link"
                    download=""
                    href="/sites/default/files/2018-10/Detailed%20Guide%20on%20the%20mandatory%20IR%20management%20criteria.docx"
                  >
                    <!---->
                     
                    <div
                      class="rpl-document-link__info"
                    >
                      <span
                        class="rpl-document-link__title"
                      >
                         Detailed Guide on the mandatory IR management criteria 
                      </span>
                       
                      <div
                        class="rpl-document-link__meta"
                      >
                        <span
                          class="rpl-document-link__type"
                        >
                          docx
                        </span>
                         
                        <span
                          class="rpl-document-link__size rpl-document-link__size--seperator"
                        >
                          75.22 KB
                        </span>
                      </div>
                    </div>
                  </a>
                   
                  <!---->
                </figure>
                 
                <p>
                  A paragraph of 
                  <strong>
                    text
                  </strong>
                   with a 
                  <rpl-link
                    class="rpl-text-link"
                    href="https://vic.gov.au"
                    innerwrap="true"
                  >
                    <span
                      class="rpl-text-label"
                    >
                      <span>
                        <!---->
                         
                        <span
                          class="rpl-text-icon__group"
                        >
                          link
                          <!---->
                        </span>
                      </span>
                    </span>
                  </rpl-link>
                  .
                </p>
              </div>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rplcheckbox"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <label
              class="rpl-checkbox"
            >
              <input
                id="checkbox-3"
                type="checkbox"
              />
               
              <span
                class="rpl-checkbox__box rpl-checkbox__box--checked"
              >
                <!---->
              </span>
               
              <span
                class="rpl-checkbox__inline-label"
              >
                Check box selected
              </span>
            </label>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rplchecklist"
        >
          <label
            for="multi-select-list-box"
          >
            <span>
              Multi-select list box
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-checklist wrapper"
            >
              <div
                class="rpl-checklist__combobox form-control"
              >
                <div
                  class="rpl-checklist__list"
                >
                  <div
                    class="rpl-checklist__list-row is-checked"
                  >
                    <label
                      class="rpl-checkbox"
                    >
                      <input
                        id="multi-select-list-box-8"
                        name="topic_a"
                        type="checkbox"
                      />
                       
                      <span
                        class="rpl-checkbox__box rpl-checkbox__box--checked"
                      >
                        <!---->
                      </span>
                       
                      <span
                        class="rpl-checkbox__inline-label"
                      >
                        Topic A
                      </span>
                    </label>
                  </div>
                  <div
                    class="rpl-checklist__list-row"
                  >
                    <label
                      class="rpl-checkbox"
                    >
                      <input
                        id="multi-select-list-box-9"
                        name="topic_b"
                        type="checkbox"
                      />
                       
                      <span
                        class="rpl-checkbox__box"
                      >
                        <!---->
                      </span>
                       
                      <span
                        class="rpl-checkbox__inline-label"
                      >
                        Topic B
                      </span>
                    </label>
                  </div>
                  <div
                    class="rpl-checklist__list-row"
                  >
                    <label
                      class="rpl-checkbox"
                    >
                      <input
                        id="multi-select-list-box-10"
                        name="topic_c"
                        type="checkbox"
                      />
                       
                      <span
                        class="rpl-checkbox__box"
                      >
                        <!---->
                      </span>
                       
                      <span
                        class="rpl-checkbox__inline-label"
                      >
                        Topic C
                      </span>
                    </label>
                  </div>
                  <div
                    class="rpl-checklist__list-row"
                  >
                    <label
                      class="rpl-checkbox"
                    >
                      <input
                        id="multi-select-list-box-11"
                        name="topic_d"
                        type="checkbox"
                      />
                       
                      <span
                        class="rpl-checkbox__box"
                      >
                        <!---->
                      </span>
                       
                      <span
                        class="rpl-checkbox__inline-label"
                      >
                        Topic D
                      </span>
                    </label>
                  </div>
                </div>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            Implemented using rplchecklist with listBox: true
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid required field-rplselect"
        >
          <label
            for="single-select-drop-down"
          >
            <span>
              Single-select drop down
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-select"
            >
              <div
                class="rpl-select__inner"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="single-select-drop-down-rpl-select-trigger single-select-drop-down-rpl-select-value"
                  class="rpl-select__trigger"
                  role="button"
                  tabindex="0"
                >
                  <span
                    id="single-select-drop-down-rpl-select-trigger"
                  >
                    Select a single topic
                  </span>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-select__dropdown"
                  style="display: none;"
                >
                  <div
                    class="rpl-select__listbox"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fa"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic A
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fb"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic B
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fc"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic C
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fd"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic D
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fe"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic e
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005ff"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic f
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fg"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic g
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="single-select-drop-down__topic__005fh"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic h
                      </span>
                       
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            Implemented using rplSelect
          </div>
           
          <!---->
        </div>
        <div
          class="form-group valid required field-rplselect"
        >
          <label
            for="multi-select-drop-down"
          >
            <span>
              Multi-select drop down
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-select"
            >
              <div
                class="rpl-select__inner"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="multi-select-drop-down-rpl-select-trigger multi-select-drop-down-rpl-select-value"
                  class="rpl-select__trigger"
                  role="button"
                  tabindex="0"
                >
                  <span
                    id="multi-select-drop-down-rpl-select-value"
                  >
                    Topic C
                  </span>
                   
                  <!---->
                   
                  <span
                    class="rpl-select__label-visually-hidden"
                  >
                     Selected
                  </span>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-select__dropdown"
                  style="display: none;"
                >
                  <div
                    aria-multiselectable="true"
                    class="rpl-select__listbox"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fa"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic A
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005f__0024__0023__0025__0026__0021__0040__007e__005e__0026__002a"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic with $#%&!@~^&*
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      aria-selected="true"
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fc"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box rpl-checkbox__box--checked"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic C
                      </span>
                       
                      <span
                        class="rpl-select__label-visually-hidden"
                      >
                        Checked
                      </span>
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fd"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic D
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fe"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic E
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005ff"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic F
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fg"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic G
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="multi-select-drop-down__topic__005fh"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class="rpl-checkbox rpl-select__checkbox"
                      >
                        <!---->
                         
                        <span
                          class="rpl-checkbox__box"
                        >
                          <!---->
                        </span>
                         
                        <!---->
                      </div>
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Topic H
                      </span>
                       
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <div
            class="hint"
          >
            Implemented using rplSelect
          </div>
           
          <!---->
        </div>
      </div>
    </fieldset>
    <fieldset
      class="rpl-fieldset valid rpl-fieldset--pad"
    >
      <div
        class="rpl-fieldset__inner"
      >
        <legend>
          Event location (grouped fields)
        </legend>
        <div
          class="form-group valid required form-group--col-two field-input"
        >
          <label
            for="building-name"
          >
            <span>
              Building name
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="building-name"
                placeholder="Enter some text..."
                required="required"
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid required form-group--col-two field-input"
        >
          <label
            for="street-address"
          >
            <span>
              Street address
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="street-address"
                placeholder="Enter some text..."
                required="required"
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid required form-group--col-two field-input"
        >
          <label
            for="suburb"
          >
            <span>
              Suburb
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="suburb"
                placeholder="Enter some text..."
                required="required"
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid required form-group--col-two field-rplselect"
        >
          <label
            for="state"
          >
            <span>
              State
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="rpl-select"
            >
              <div
                class="rpl-select__inner"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="state-rpl-select-trigger state-rpl-select-value"
                  class="rpl-select__trigger"
                  role="button"
                  tabindex="0"
                >
                  <span
                    id="state-rpl-select-value"
                  >
                    Vic
                  </span>
                   
                  <!---->
                   
                  <span
                    class="rpl-select__label-visually-hidden"
                  >
                     Selected
                  </span>
                   
                  <!---->
                </div>
                 
                <div
                  class="rpl-select__dropdown"
                  style="display: none;"
                >
                  <div
                    class="rpl-select__listbox"
                    role="listbox"
                    tabindex="-1"
                  >
                    <div
                      class="rpl-select__listitem rpl-select__listitem--selected"
                      id="state__vic"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Vic
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="state__nsw"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        New South Wales
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="state__wa"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Western Australia
                      </span>
                       
                      <!---->
                    </div>
                    <div
                      class="rpl-select__listitem"
                      id="state__ql"
                      role="option"
                      tabindex="-1"
                    >
                      <!---->
                       
                      <span
                        class="rpl-select__listitem-label"
                      >
                        Queensland
                      </span>
                       
                      <!---->
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid form-group--col-two field-input"
        >
          <label
            for="postcode"
          >
            <span>
              Postcode
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="postcode"
                placeholder="Enter some text..."
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
      </div>
    </fieldset>
    <fieldset
      class="rpl-fieldset valid"
    >
      <div
        class="rpl-fieldset__inner"
      >
        <!---->
        <div
          class="form-group valid form-group--inline field-rplsubmitloader"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <button
              class="rpl-submit-loader form-control"
              type="submit"
            >
              <span
                class="rpl-submit-loader__text"
              >
                Submit (with animation)
              </span>
               
              <!---->
            </button>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid form-group--inline field-rplclearform"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <button
              class="rpl-clearform"
            >
              <span>
                <span
                  class="rpl-text-icon__group"
                >
                  <!---->
                  Clear
                </span>
                 
                <span>
                   search filters
                </span>
              </span>
            </button>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
      </div>
    </fieldset>
  </div>
</form>
`;

exports[`RippleStoryshots Molecules/Form Submission Alerts 1`] = `
<form
  class="rpl-form rpl-form--full-width"
>
  <h3
    class="rpl-form__title"
  >
    Submission Alerts
  </h3>
   
  <!---->
   
  <div
    class="vue-form-generator"
  >
    <fieldset
      class="rpl-fieldset"
    >
      <div
        class="rpl-fieldset__inner"
      >
        <div
          class="form-group valid field-radios"
        >
          <label
            for="alert-type"
          >
            <span>
              Alert type
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="radio-list"
            >
              <label
                class="is-checked"
              >
                <input
                  id="alert-type-12"
                  name="submissionType"
                  type="radio"
                  value="Success"
                />
                Success
              </label>
              <label
                class=""
              >
                <input
                  id="alert-type-13"
                  name="submissionType"
                  type="radio"
                  value="Error"
                />
                Error
              </label>
              <label
                class=""
              >
                <input
                  id="alert-type-14"
                  name="submissionType"
                  type="radio"
                  value="Other"
                />
                Other
              </label>
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-input"
        >
          <label
            for="message"
          >
            <span>
              Message
            </span>
             
            <!---->
          </label>
           
          <div
            class="field-wrap"
          >
            <div
              class="wrapper"
            >
              <input
                class="form-control"
                id="message"
                type="text"
              />
              <!---->
            </div>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
        <div
          class="form-group valid field-rplsubmitloader"
        >
          <!---->
           
          <div
            class="field-wrap"
          >
            <button
              class="rpl-submit-loader form-control"
              type="submit"
            >
              <span
                class="rpl-submit-loader__text"
              >
                Submit
              </span>
               
              <!---->
            </button>
             
            <!---->
          </div>
           
          <!---->
           
          <!---->
        </div>
      </div>
    </fieldset>
  </div>
</form>
`;

exports[`RippleStoryshots Molecules/Form/Select Multiselect 1`] = `
<div
  class="rpl-select"
>
  <div
    class="rpl-select__inner"
  >
    <div
      aria-haspopup="listbox"
      aria-labelledby="select-rpl-select-trigger select-rpl-select-value"
      class="rpl-select__trigger"
      role="button"
      tabindex="0"
    >
      <span
        id="select-rpl-select-trigger"
      >
        Select
      </span>
       
      <!---->
    </div>
     
    <div
      class="rpl-select__dropdown"
      style="display: none;"
    >
      <div
        aria-multiselectable="true"
        class="rpl-select__listbox"
        role="listbox"
        tabindex="-1"
      >
        <div
          class="rpl-select__listitem"
          id="select__vic"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Vic
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__nsw"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            New South Wales
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__wa"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Western Australia
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__ql"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Queensland
          </span>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Form/Select Multiselect initial state 1`] = `
<div
  class="rpl-select"
>
  <div
    class="rpl-select__inner"
  >
    <div
      aria-haspopup="listbox"
      aria-labelledby="select-rpl-select-trigger select-rpl-select-value"
      class="rpl-select__trigger"
      role="button"
      tabindex="0"
    >
      <span
        id="select-rpl-select-value"
      >
        New South Wales, Vic
      </span>
       
      <!---->
       
      <span
        class="rpl-select__label-visually-hidden"
      >
         Selected
      </span>
       
      <!---->
    </div>
     
    <div
      class="rpl-select__dropdown"
      style="display: none;"
    >
      <div
        aria-multiselectable="true"
        class="rpl-select__listbox"
        role="listbox"
        tabindex="-1"
      >
        <div
          aria-selected="true"
          class="rpl-select__listitem"
          id="select__vic"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box rpl-checkbox__box--checked"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Vic
          </span>
           
          <span
            class="rpl-select__label-visually-hidden"
          >
            Checked
          </span>
        </div>
        <div
          aria-selected="true"
          class="rpl-select__listitem"
          id="select__nsw"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box rpl-checkbox__box--checked"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            New South Wales
          </span>
           
          <span
            class="rpl-select__label-visually-hidden"
          >
            Checked
          </span>
        </div>
        <div
          class="rpl-select__listitem"
          id="select__wa"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Western Australia
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__ql"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Queensland
          </span>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Form/Select Multiselect initial state with object 1`] = `
<div
  class="rpl-select"
>
  <div
    class="rpl-select__inner"
  >
    <div
      aria-haspopup="listbox"
      aria-labelledby="select-rpl-select-trigger select-rpl-select-value"
      class="rpl-select__trigger"
      role="button"
      tabindex="0"
    >
      <span
        id="select-rpl-select-value"
      >
        New South Wales, Vic, Western Australia
      </span>
       
      <!---->
       
      <span
        class="rpl-select__label-visually-hidden"
      >
         Selected
      </span>
       
      <!---->
    </div>
     
    <div
      class="rpl-select__dropdown"
      style="display: none;"
    >
      <div
        aria-multiselectable="true"
        class="rpl-select__listbox"
        role="listbox"
        tabindex="-1"
      >
        <div
          aria-selected="true"
          class="rpl-select__listitem"
          id="select__vic"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box rpl-checkbox__box--checked"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Vic
          </span>
           
          <span
            class="rpl-select__label-visually-hidden"
          >
            Checked
          </span>
        </div>
        <div
          aria-selected="true"
          class="rpl-select__listitem"
          id="select__nsw"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box rpl-checkbox__box--checked"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            New South Wales
          </span>
           
          <span
            class="rpl-select__label-visually-hidden"
          >
            Checked
          </span>
        </div>
        <div
          aria-selected="true"
          class="rpl-select__listitem"
          id="select__wa"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box rpl-checkbox__box--checked"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Western Australia
          </span>
           
          <span
            class="rpl-select__label-visually-hidden"
          >
            Checked
          </span>
        </div>
        <div
          class="rpl-select__listitem"
          id="select__ql"
          role="option"
          tabindex="-1"
        >
          <div
            class="rpl-checkbox rpl-select__checkbox"
          >
            <!---->
             
            <span
              class="rpl-checkbox__box"
            >
              <!---->
            </span>
             
            <!---->
          </div>
           
          <span
            class="rpl-select__listitem-label"
          >
            Queensland
          </span>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Form/Select Set initial state 1`] = `
<div
  class="rpl-select"
>
  <div
    class="rpl-select__inner"
  >
    <div
      aria-haspopup="listbox"
      aria-labelledby="select-rpl-select-trigger select-rpl-select-value"
      class="rpl-select__trigger"
      role="button"
      tabindex="0"
    >
      <span
        id="select-rpl-select-value"
      >
        New South Wales
      </span>
       
      <!---->
       
      <span
        class="rpl-select__label-visually-hidden"
      >
         Selected
      </span>
       
      <!---->
    </div>
     
    <div
      class="rpl-select__dropdown"
      style="display: none;"
    >
      <div
        class="rpl-select__listbox"
        role="listbox"
        tabindex="-1"
      >
        <div
          class="rpl-select__listitem"
          id="select__vic"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Vic
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem rpl-select__listitem--selected"
          id="select__nsw"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            New South Wales
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__wa"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Western Australia
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__ql"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Queensland
          </span>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Form/Select Single 1`] = `
<div
  class="rpl-select"
>
  <div
    class="rpl-select__inner"
  >
    <div
      aria-haspopup="listbox"
      aria-labelledby="select-rpl-select-trigger select-rpl-select-value"
      class="rpl-select__trigger"
      role="button"
      tabindex="0"
    >
      <span
        id="select-rpl-select-trigger"
      >
        Select
      </span>
       
      <!---->
    </div>
     
    <div
      class="rpl-select__dropdown"
      style="display: none;"
    >
      <div
        class="rpl-select__listbox"
        role="listbox"
        tabindex="-1"
      >
        <div
          class="rpl-select__listitem"
          id="select__vic"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Vic
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__nsw"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            New South Wales
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__wa"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Western Australia
          </span>
           
          <!---->
        </div>
        <div
          class="rpl-select__listitem"
          id="select__ql"
          role="option"
          tabindex="-1"
        >
          <!---->
           
          <span
            class="rpl-select__listitem-label"
          >
            Queensland
          </span>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
